# AgentCode

./: .gitignore  README.md  env_setup.sh  pyproject.toml  run.sh
agent_code/: __init__.py  agent.py  cli.py  config.py  context.py  git_handler.py  llm.py  patcher.py  scanner.py
agent_code.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
agent_code/prompts/: __init__.py  base.py  edit.py  explain.py  generate.py  review.py
vscode-extension/: .vscodeignore  package-lock.json  package.json  tsconfig.json
vscode-extension/src/: agentWorkflow.ts  chatPanel.ts  codeLens.ts  config.ts  contextBuilder.ts  diffManager.ts  editCommand.ts  extension.ts  inlineProvider.ts  intentRouter.ts  ollama.ts  prompts.ts  taskManager.ts  verifier.ts
