[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-code"
version = "0.1.0"
description = "AI-powered CLI coding assistant using local LLM (DeepSeek-Coder via Ollama)"
requires-python = ">=3.10"
dependencies = [
    "typer[all]>=0.9.0",
    "httpx>=0.25.0",
    "rich>=13.0.0",
    "gitpython>=3.1.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
agent-code = "agent_code.cli:app"

[tool.setuptools.packages.find]
include = ["agent_code*"]
